<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >
        
    <TextView
        android:id="@+id/goal_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_name" />

    <EditText
        android:id="@+id/get_goal_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/goalname_hint"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <EditText
        android:id="@+id/get_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/goaldescription_hint"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/starting_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_date" />

    <DatePicker
        android:id="@+id/starting_datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/starting_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_time" />

    <TimePicker
        android:id="@+id/starting_timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ending_date" />
    
    
    <DatePicker
        android:id="@+id/end_datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    
    <TextView
        android:id="@+id/end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ending_time" />

    <TimePicker
        android:id="@+id/end_timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
  	    android:onClick="create" 
        android:text="@string/create_button" />
    
    </LinearLayout>
    
    </ScrollView>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical" >
    
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="create_button" />
    </LinearLayout>

    
</LinearLayout>
