<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context="com.example.goaltracker.LoginActivity"
   tools:ignore="MergeRootFrame" >
   
    
	    
	<!--<TextView 
	    android:id="@+id/textView1" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:layout_alignParentTop="true" 
	    android:layout_centerHorizontal="true" 
	    android:layout_marginTop="18dp" 
	    android:text="@string/hello_world" 
	    android:textAppearance="?android:attr/textAppearanceLarge" />--> 
	    
  	<TextView 
  	    android:id="@+id/username_text" 
  	    android:layout_width="wrap_content" 
  	    android:layout_height="wrap_content" 
  	    android:layout_alignParentLeft="true" 
  	    android:layout_marginTop="50dp" 
  	    android:text="@string/username" 
  	    android:textAppearance="?android:attr/textAppearanceMedium" /> 
  	    
  	<EditText 
		android:id="@+id/username_get" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:layout_alignBottom="@+id/username_text" 
		android:layout_marginLeft="32dp" 
		android:layout_toRightOf="@+id/username_text"
		android:hint="" 
		android:ems="10">
  		<requestFocus /> 
  	</EditText>
  	
  	<TextView 
  	    android:id="@+id/password_text" 
  	    android:layout_width="wrap_content" 
  	    android:layout_height="wrap_content" 
  	    android:layout_alignLeft="@+id/username_text" 
  	    android:layout_below="@+id/username_text" 
  	    android:layout_marginTop="38dp" 
  	    android:text="@string/password" 
  	    android:textAppearance="?android:attr/textAppearanceMedium" /> 
  	    
  	<EditText 
  	    android:id="@+id/password_get" 
  	    android:layout_width="wrap_content" 
  	    android:layout_height="wrap_content" 
  	    android:layout_alignBottom="@+id/password_text" 
  	    android:layout_alignLeft="@+id/username_get" 
		android:hint="" 
  	    android:ems="10" 
  	    android:inputType="textPassword" />
  	 
  	<Button 
  	    android:id="@+id/login_button" 
  	    android:layout_width="wrap_content" 
  	    android:layout_height="wrap_content" 
  	    android:layout_below="@+id/password_get" 
  	    android:layout_centerHorizontal="true" 
  	    android:layout_marginTop="94dp" 
  	    android:onClick="login" 
  	    android:text="@string/Login" /> 
  	    
  	<!-- 
  	<TextView 
  	    android:id="@+id/textView4" 
  	    android:layout_width="wrap_content" 
  	    android:layout_height="wrap_content" 
  	    android:layout_alignLeft="@+id/textView3" 
  	    android:layout_below="@+id/textView3" 
  	    android:layout_marginLeft="30dp" 
  	    android:layout_marginTop="48dp" 
  	    android:text="@string/attempts" 
  	    android:textAppearance="?android:attr/textAppearanceMedium" /> 
  	     -->
  	    
  	<!--
  	<TextView 
  	    android:id="@+id/textView5" 
  	    android:layout_width="wrap_content" 
  	    android:layout_height="wrap_content" 
  	    android:layout_alignRight="@+id/textView1" 
  	    android:layout_alignTop="@+id/textView4" 
  	    android:text="" />
  	      --> 
    
    
    
    </RelativeLayout>

